Small fixes to overflows, sizing issues, small colour changes and positioning

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body::-webkit-scrollbar {
 .header-wrapper {
     position: sticky;
     z-index: 9;
-    top: 0px;
+    top: -1px;
     left: 0px;
     width: 100%;
     color: white;
@@ -59,7 +59,7 @@ body::-webkit-scrollbar {
     -webkit-box-pack: justify;
     justify-content: space-between;
     height: 8vh;
-    background-color: var(--backgroundGrey);
+    background-color: var(--darkgrey);
 }
 
 .logo {
